<resources>
    <string name="app_name">Inspection-App</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="logout">logout</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>

    <string name="hint_title">Title</string>
    <string name="hint_sub_title">SubTitle</string>
    <string name="btn_save">Save</string>
    <string name="btn_submit">Submit</string>
    <string name="hint_questions">Questions</string>

</resources>